--- a/src/main/java/org/kite9/diagram/visualization/compaction/position/package.html
+++ b/src/main/java/org/kite9/diagram/visualization/compaction/position/package.html
@@ -1,4 +1,4 @@
 <body>
-	This part of compaction deals with setting the actual x + y coordinates of each segment, and
-	therefore the darts that make up the segments.
+	This part of compaction takes the underlying dart positions and uses them to compute the routes
+	of the container borders and edges in the diagram.
 </body>
