Transform starting to work on the client side

--- a/server/kite9-server-java/src/main/resources/static/public/classes/transition/xsl-tester.html
+++ b/server/kite9-server-java/src/main/resources/static/public/classes/transition/xsl-tester.html
@@ -12,6 +12,7 @@
 
 				transition.xslt(doc, '/public/templates/basic/basic-template.xsl', cb => {
 					alert("done: "+cb);
+					document.body.appendChild(cb.documentElement);
 				});
 
 
