--- a/server/kite9-client-js/src/main/resources/static/public/classes/transition/xsl-tester.html
+++ b/server/kite9-client-js/src/main/resources/static/public/classes/transition/xsl-tester.html
@@ -2,21 +2,38 @@
 
 	<head>
 	
-			<title>yo</title>
-	<script type="module">
+		 <title>yo</title>
+         <link rel="stylesheet" href="/public/templates/basic/basic-textures.css">
+         <style type="text/css" xml:space="preserve">
+		     		@import url('/public/templates/formats/formats.css');
+		     		@import url('/public/templates/diagram/diagram-elements.css');
+		     		@import url('/public/templates/containers/containers-elements.css');
+		     		@import url('/public/templates/labels/labels-elements.css');
+		     		@import url('/public/templates/grid/grid-elements.css');
+		     		@import url('/public/templates/links/links-elements.css');
+		     		@import url('/public/templates/textarea/textarea-elements.css');
+		     		@import url('/public/templates/basic/basic-elements.css');
+		     		@import url('/public/templates/basic/basic-textures.css');</style>
+
+		  </style>         
+         
+	     <script type="module">
 			import { Transition } from '/public/classes/transition/transition.js';
 			
-			const transition = new Transition('/public/templates/basic/example.adl');
+			const transition = new Transition();
+			const command = new Command();
 	
-			transition.get('/public/templates/basic/example.adl').then(doc => {
+			setTimeout(() => {
+				transition.get('/public/templates/basic/example.adl?format=adl').then(doc => {
 
-				transition.xslt(doc, '/public/templates/basic/basic-template.xsl', cb => {
-					alert("done: "+cb);
-					document.body.appendChild(cb.documentElement);
+					transition.xslt(doc, '/public/templates/basic/basic-template.xsl', cb => {
+						alert("done: "+cb);
+						document.body.appendChild(cb.documentElement);
+					});
+
+
 				});
-
-
-			});
+			},1000)
 
 		</script>
 	
