MOving components back to server

--- a/server/kite9-server-java/src/test/resources/rendering/public/testExampleHTML/diagram.html
+++ b/server/kite9-server-java/src/test/resources/rendering/public/testExampleHTML/diagram.html
@@ -30,7 +30,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:pp="http://www.kite9.org/schema/post-processor" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:adl="http://www.kite9.org/schema/adl" xmlns:exslt="http://exslt.org/common" contentScriptType="text/ecmascript" zoomAndPan="magnify" contentStyleType="text/css" version="1.0" width="692" pp:width="$width" preserveAspectRatio="xMidYMid meet" height="745" pp:height="$height">
   <metadata xmlns:md="http://www.kite9.org/schema/metadata">
     <md:role>editor</md:role>
-    <md:self>http://localhost:39000/public/templates/risk-first/examples/minimal.adl?format=html</md:self>
+    <md:self>http://localhost:39000/public/templates/risk-first/examples/minimal.adlformat=html</md:self>
     <md:title>minimal</md:title>
   </metadata>
   <defs>
@@ -170,7 +170,7 @@
                  };
               </script>
     <script xlink:actuate="onLoad" xlink:type="simple" xlink:show="other" type="module" xmlns:xlink="http://www.w3.org/1999/xlink">
-     import '/github/kite9-org/kite9/templates/risk-first/risk-first.js?v=v0.13'
+     import '/github/kite9-org/kite9/templates/risk-first/risk-first.js?v=v0.14'
   </script>
   </defs>
 </svg>
